# fundlens

./: README.md  example.py  pyproject.toml
src/fundlens/: __init__.py  client.py  exceptions.py  forecast.py  models.py  portfolio.py
src/fundlens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_fundlens.py
